apps/security/tenant-guardrails/manifests/require-resource-quota-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireResourceQuota
metadata:
  name: tenant-require-resource-quota
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: teams.example.com/team-id
          operator: Exists
